# todo-dashboard

./: .gitignore  README.md  pyproject.toml
tests/: conftest.py  test_api.py  test_parser.py  test_service.py
tests/fixtures/: sample_todo.md
todo_dashboard/: __init__.py  __main__.py  api.py  cli.py  config.py  models.py  parser.py  query_cli.py  service.py
todo_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
todo_dashboard/static/: dashboard.js  styles.css
todo_dashboard/templates/: dashboard.html
