[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-dashboard"
version = "0.1.0"
description = "Local dashboard for workspace .notes todo files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "jinja2>=3.1.0",
  "markdown>=3.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[project.scripts]
todo-dashboard = "todo_dashboard.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
